tests/baselines/reference/topLevelAwait(module=esnext,target=es2015).errors.txt
tests/cases/conformance/externalModules/topLevelAwait.ts(2,1): error TS1378: Top-level 'await' expressions are only allowed when the 'module' option is set to 'esnext' or 'system', and the 'target' option is set to 'es2017' or higher.


==== tests/cases/conformance/externalModules/topLevelAwait.ts (1 errors) ====
    export const x = 1;
    await x;
    ~~~~~
!!! error TS1378: Top-level 'await' expressions are only allowed when the 'module' option is set to 'esnext' or 'system', and the 'target' option is set to 'es2017' or higher.
    